--- a/admin.html
+++ b/admin.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel - CodeCraftMarketing.in</title>
     <link rel="stylesheet" href="style.css">
-    <script src="components/SiteHeader.js" defer></script>
-    <script src="components/SiteFooter.js" defer></script>
-    <script src="components/AdminPanel.js" defer></script>
-    <script src="components/ProductManager.js" defer></script>
 </head>
 <body>
     <site-header></site-header>
+
     <main>
         <admin-panel></admin-panel>
     </main>
+
     <site-footer></site-footer>
+
+    <script src="admin.js" type="module"></script>
 </body>
 </html>
