--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - CodeCraftMarketing.in</title>
     <link rel="stylesheet" href="style.css">
-    <script src="components/SiteHeader.js" defer></script>
-    <script src="components/SiteFooter.js" defer></script>
-    <script src="components/ContactForm.js" defer></script>
 </head>
 <body>
     <site-header></site-header>
+
     <main>
         <contact-form></contact-form>
     </main>
+
     <site-footer></site-footer>
+
+    <script src="main.js" type="module"></script>
+    <script src="components/ContactForm.js" type="module"></script>
 </body>
 </html>
