--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms and Conditions - CodeCraftMarketing.in</title>
     <link rel="stylesheet" href="style.css">
-    <script src="components/SiteHeader.js" defer></script>
-    <script src="components/SiteFooter.js" defer></script>
 </head>
 <body>
     <site-header></site-header>
@@ -19,5 +17,6 @@
         </section>
     </main>
     <site-footer></site-footer>
+    <script src="main.js" type="module"></script>
 </body>
 </html>
